--- a/feedbin-image/Dockerfile
+++ b/feedbin-image/Dockerfile
@@ -1,18 +1,13 @@
-FROM alpine:3.13
+FROM ruby:latest
 
 WORKDIR /app
 
-RUN apk add --no-cache \
-    build-base \
-    git \
-    ruby-dev \
-    ruby-etc \
-    ruby-io-console \
-    ruby-json \
-    libxml2-dev \ 
-    vips-dev \
-    && git clone https://github.com/feedbin/image.git /app \
-    && gem install bundler \
-    && bundle install
+RUN apt-get update
+RUN apt-get install \
+	git
+
+RUN git clone https://github.com/feedbin/image.git /app
+
+RUN bundle install
 
 CMD ["bundle", "exec", "foreman", "start"]
