--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -5,6 +5,7 @@ ARG FEEDBIN_URL
 WORKDIR /app
 
 RUN apk add --no-cache \
+	build-base \
 	git
 
 RUN git clone https://github.com/feedbin/feedbin.git /app
