--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -8,6 +8,8 @@ RUN apk add --no-cache \
 	build-base \
 	libidn-dev \
 	libpq \
+	postgresql-client \
+	postgresql-dev \
 	git
 
 RUN git clone https://github.com/feedbin/feedbin.git /app
