--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -7,9 +7,7 @@ WORKDIR /app
 RUN apk add --no-cache \
 	build-base \
 	libidn-dev \
-	libpq \
-	postgresql-client \
-	postgresql-dev \
+	libpq-dev \
 	git
 
 RUN git clone https://github.com/feedbin/feedbin.git /app
