Update dep list

--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -9,6 +9,7 @@ RUN apk add --no-cache \
 	libidn-dev \
 	libpq-dev \
 	nodejs \
+	imagemagick \
 	git
 
 RUN git clone https://github.com/feedbin/feedbin.git /app
