Update dep list

--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -9,7 +9,8 @@ RUN apk add --no-cache \
 	libidn-dev \
 	libpq-dev \
 	nodejs \
-	imagemagick \
+	imagemagick-dev \
+	vips-dev \
 	git
 
 RUN git clone https://github.com/feedbin/feedbin.git /app
