--- a/feedbin-privacy_please/Dockerfile
+++ b/feedbin-privacy_please/Dockerfile
@@ -3,6 +3,7 @@ FROM ruby:alpine
 WORKDIR /app
 
 RUN apk add --no-cache \
+	build-base \
 	git
 
 RUN git clone https://github.com/feedbin/privacy-please.git /app
