Pin redis version

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -165,7 +165,7 @@ services:
     restart: unless-stopped
 
   feedbin-redis:
-    image: redis:alpine
+    image: redis:6-alpine
     container_name: feedbin-redis
     volumes:
       - feedbin_redis:/data
