--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -18,7 +18,7 @@ RUN apk add --no-cache \
 
 RUN git clone https://github.com/feedbin/feedbin.git /app && rm -rf /app/.git
 
-RUN bundle install
+RUN bundle install --without development test
 
 RUN bundle exec rake assets:precompile
 
