--- a/feedbin-privacy_please/Dockerfile
+++ b/feedbin-privacy_please/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache \
 	build-base \
 	git
 
-RUN git clone https://github.com/feedbin/privacy-please.git /app
+RUN git clone https://github.com/feedbin/privacy-please.git /app && rm -rf /app/.git
 
 RUN bundle install --without development test
 
