--- a/feedbin-privacy_please/Dockerfile
+++ b/feedbin-privacy_please/Dockerfile
@@ -8,7 +8,7 @@ RUN apk add --no-cache \
 
 RUN git clone https://github.com/feedbin/privacy-please.git /app && rm -rf /app/.git
 
-RUN bundle install --without development test
+RUN bundle install
 
 RUN bundle exec rake assets:precompile
 
