--- a/feedbin-web/Dockerfile
+++ b/feedbin-web/Dockerfile
@@ -18,6 +18,6 @@ RUN apk add --no-cache \
 
 RUN git clone https://github.com/feedbin/feedbin.git /app && rm -rf /app/.git
 
-RUN bundle install --without development test
+RUN bundle install
 
 CMD ["bundle", "exec", "foreman", "start"]
