--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -28,7 +28,7 @@ x-common-variables: &feedbin-environment
 - AWS_SECRET_ACCESS_KEY=$MINIO_SECRET_KEY
 - AWS_S3_BUCKET=$MINIO_BUCKET
 - AWS_S3_BUCKET_FAVICONS=$MINIO_BUCKET
-- AWS_S3_ENDPOINT=https://$MINIO_HOST
+- AWS_S3_ENDPOINT=http://$MINIO_HOST
 - AWS_S3_PATH_STYLE
 - ENTRY_IMAGE_HOST=$MINIO_HOST
 - TWITTER_KEY
