--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ EXTRACT_SECRET= #generate with openssl rand -hex 32
 
 # Camo
 CAMO_HOST=camo.feedbin.domain.tld
-CAMO_KEY= #generate with openssl rand -hex 32
+PRIVACY_KEY= #generate with openssl rand -hex 32
 
 # SMTP
 SMTP_ADDRESS=
