ci: fix typo on matrix configuration

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
   build:
     strategy:
       matrix:
-        containers: ["extract", "privacy_please", "web"]
+        container: ["extract", "privacy_please", "web"]
     runs-on: ubuntu-latest
     permissions:
       contents: read
